fix image stretch on mobile

--- a/styles.css
+++ b/styles.css
@@ -125,9 +125,9 @@ nav {
 }
 
 #project-list img {
+    max-width: 80vmin;
     width: 100%;
-    height: 80%;
-    max-height: 60vmin;
+    height: auto;
 }
 
 #project-list li {
